test: 위시 테스트 페이지네이션 적용